--- a/main.ui
+++ b/main.ui
@@ -166,6 +166,7 @@
     <addaction name="actionTextTranslator"/>
     <addaction name="actionDownloadManager"/>
     <addaction name="actionDictionary"/>
+    <addaction name="actionFullscreen"/>
     <addaction name="actionDetachTab"/>
     <addaction name="separator"/>
     <addaction name="actionShowLog"/>
@@ -386,10 +387,23 @@
   </action>
   <action name="actionDownloadManager">
    <property name="icon">
-    <iconset theme="folder-downloads"/>
+    <iconset theme="folder-downloads">
+     <normaloff/>
+    </iconset>
    </property>
    <property name="text">
     <string>Download &amp;manager</string>
+   </property>
+  </action>
+  <action name="actionFullscreen">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Show &amp;fullscreen</string>
+   </property>
+   <property name="shortcut">
+    <string>F11</string>
    </property>
   </action>
  </widget>
